--- a/package.json
+++ b/package.json
@@ -20,8 +20,15 @@
     "@casl/ability": "^6.8.0",
     "@casl/react": "^5.0.1",
     "@clerk/tanstack-react-start": "^0.28.1",
+    "@convex-dev/aggregate": "^0.2.1",
+    "@convex-dev/crons": "^0.2.0",
+    "@convex-dev/expo-push-notifications": "^0.3.1",
+    "@convex-dev/geospatial": "^0.2.1",
     "@convex-dev/r2": "^0.9.0",
+    "@convex-dev/rate-limiter": "^0.3.2",
     "@convex-dev/react-query": "0.1.0",
+    "@convex-dev/workflow": "^0.3.4",
+    "@convex-dev/workpool": "^0.3.1",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
