--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "format": "prettier --write .",
     "lint": "tsc && eslint .  --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "check": "ultracite check",
-    "fix": "ultracite fix",
+    "fix": "ultracite fix"
   },
   "dependencies": {
     "@base-ui/react": "^1.1.0",
